// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add layout section handler for a dashboard with existing sections should add new first section by using index 0 1`] = `
Object {
  "header": undefined,
  "items": Array [],
  "type": "IDashboardLayoutSection",
}
`;

exports[`add layout section handler for a dashboard with existing sections should add new last section by using relative index -1 1`] = `
Object {
  "header": undefined,
  "items": Array [],
  "type": "IDashboardLayoutSection",
}
`;

exports[`add layout section handler for an empty dashboard should add a new empty section at relative index -1 1`] = `
Object {
  "header": undefined,
  "items": Array [],
  "type": "IDashboardLayoutSection",
}
`;

exports[`add layout section handler for an empty dashboard should add a new empty section at relative index 0 1`] = `
Object {
  "header": undefined,
  "items": Array [],
  "type": "IDashboardLayoutSection",
}
`;

exports[`add layout section handler for an empty dashboard should add a new section and initialize its header 1`] = `
Object {
  "header": Object {
    "description": "My Section Description",
    "title": "My Section",
  },
  "items": Array [],
  "type": "IDashboardLayoutSection",
}
`;

exports[`add layout section handler for an empty dashboard should add a new section and initialize its items 1`] = `
Object {
  "header": undefined,
  "items": Array [
    Object {
      "size": Object {
        "xl": Object {
          "gridWidth": 2,
        },
      },
      "type": "IDashboardLayoutItem",
      "widget": Object {
        "customType": "kpiPlaceholder",
        "type": "customWidget",
      },
    },
    Object {
      "size": Object {
        "xl": Object {
          "gridWidth": 2,
        },
      },
      "type": "IDashboardLayoutItem",
      "widget": Object {
        "customType": "insightPlaceholder",
        "type": "customWidget",
      },
    },
  ],
  "type": "IDashboardLayoutSection",
}
`;
